update to GPU upstream changes

--- a/Project.toml
+++ b/Project.toml
@@ -28,17 +28,17 @@ WGSLTypes = "8cf5275a-6167-4820-ac24-74d7d0e6cf05"
 Adapt = "^4.0"
 CodeTracking = "^1.3"
 ExprTools = "^0.1"
-GPUArrays = "^10.0"
-GPUCompiler = "^0.25, 0.26"
+GPUArrays = "^11.0"
+GPUCompiler = "^1.0"
 GeometryBasics = "^0.4"
 Infiltrator = "^1.7"
-LLVM = "^6.0, 7"
+LLVM = "^9.0"
 Lazy = "^0.15"
 MacroTools = "^0.5"
 Reexport = "^1.2"
 Revise = "^3.5"
 StaticArrays = "^1.8"
-Tracy = "0.1"
+Tracy = "^0.1"
 WGPUCore = "^0.1"
 WGPUNative = "^0.1"
 WGPUTranspiler = "^0.1"
